--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -305,6 +305,18 @@ h2b %>%
 
 In 2008, Congress failed to renew the Save Our Small and Seasonal Bussinesses Act (SOSSBA). This reduced the cap for the total number of H2B Visas that could be approved every year. 
 
+```{r - bar-graph}
+h2b %>% 
+  filter(case_status %in% c("CERTIFIED", "PARTIAL CERTIFIED", "DENIED")) %>%
+  filter(!is.na(basic_rate_of_pay) & !(is.na(basic_unit_of_pay)), basic_unit_of_pay == "HR", basic_rate_of_pay < 500) %>%
+  group_by(case_status) %>%
+  ggplot(mapping = aes(x = case_status, y = basic_rate_of_pay, color = case_status)) +
+  geom_boxplot() +
+  labs(title = "Wages by application result",
+       x = "Application Result",
+       y = "Wage")
+```
+
 ```{r-mutate-prop-certified}
 h2b <- h2b %>%
   mutate(prop_workers_certified = nbr_workers_certified/nbur_workers_requested) 
