--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -385,11 +385,8 @@ shinyApp(ui = ui, server = server)
 
 The following show summary statistics for the percentage of visas approved by state, and a summary of the states with the higest and lowest approval rates. 
 
-<<<<<<< HEAD
-It's difficult to see a pattern of the state approval rates. Both the maps and the summary show that there are states in both the highest and lowest from each region in the US. One interesting observation is that of the 8 states in which most workers start in the Fall, 5 are among the lost approval rates. 
-=======
 It's difficult to see a pattern the state approval rates. Both the maps and the summary show that there are states in both the highest and lowest from each region in the US. One interesting observation is that of the 8 states in which most workers start in the Fall, 5 are among the lowest approval rates. However, we were unable to find a reason that fall applications do so poorly. 
->>>>>>> fffe2e959c6b348bb60b5e08e2933012ca6be836
+
 ```{r state-proportions}
 state_props %>%
   summarise(min = min(prop), 
@@ -497,8 +494,13 @@ Another interesting observation is that most workers appear to be working in the
 
 ###Conclusions
 
-If we had more time, we would also include logistic regression to analyze the likelihood of an individual application being approved. This would allow us to set the dependent variable as a categorical one. We would also look at policies that relate to H2-B visas to find if there are any institutional reasons one visa application is more likely to be approved. 
+From this project, we learned a lot about the factors that affect H2B visa approval. Our linear model, visualizations, and summary statistics showed that region, occupational category, and season had significant effects on the percent of workers that were approved. The maps allowed us to break down differences on a state by state basis, while the bar graphs gave us an understanding of some of the bigger picture categories. We found that while regions played a role in explaining the differences in approval rates, subregions helped explain some of the other differences we found in the dataset. For example, we were able to find clusters of states within regions where service jobs were most popular rather than agricultural ones. We were also able to locate anomalous states like Washington, where processing is the most popular job type and workers are payed very high wages.
 
+For data analysis in this project we decided to focus mainly on shiny visualizations because they are interactive and allow users to explore the dataset on their own. However, they have some limitations. Because they can change in many ways, it's more difficult to make them specific. We found that some shiny visualizations were less visually appealing than others. If they were static visualizations, we could have made specific changes to these, but because on visualization covered many variables, it was difficult to adjust them. There were also small issues, like not being able to give more informative title and axis labels to the visualization because those things changed. 
+
+Additionally, we think that it would have been helpful to have annotations on our visualizations, especially the map, that pointed out their most interesting features, such as states with surprising characteristics. This is another feature that was difficult to implement in shiny. However, we do think that we were able to provide strong explanations in our written analysis after the visualizations. This allows the reader to perform their own explorations using the interactive features, and allows us to tell our narrative through writing and summary statistics.
+
+If we had more time, we would also include logistic regression to analyze the likelihood of an individual application being approved. This would allow us to set the dependent variable as a categorical one. We would also look at policies that relate to H2-B visas to find if there are any institutional reasons one visa application is more likely to be approved. 
 
 In terms of our dataset, there could be several things pertaining to the reliability and validity of our conclusions. As is the case in most large datasets, we had some NA values that we had to deal with. Since we combined data from several years, different years would sometimes have different columns, so we would get a lot of NA's as a result. We made do with what we had, but missing years of data could mean that changes from year to year were not represented as well. Another hurdle that we had to overcome with our data was the different wage units. Wages were mostly reported as hourly wages, but in some cases they were reported as monthly or yearly wages instead. Since there was no column reporting how many hours each worker worked, there was no way for us to standardize this data. Alas, when examining differences in wages, we chose to mainly foucs on the hourly data since that is what we had the most of to work with. Lastly we had some trouble working with the dates because they were not written in the same format each year. For example, some dates were written as 1/27/08 and others were written as 1-Jan-08. We eventually found a way to make things work, but it took us a while to get things correct. 
 
