--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -516,9 +516,11 @@ For data analysis in this project we decided to focus mainly on shiny visualizat
 
 Additionally, we think that it would have been helpful to have annotations on our visualizations, especially the map, that pointed out their most interesting features, such as states with surprising characteristics. This is another feature that was difficult to implement in shiny. However, we do think that we were able to provide strong explanations in our written analysis after the visualizations. This allows the reader to perform their own explorations using the interactive features, and allows us to tell our narrative through writing and summary statistics.
 
-If we had more time, we would also include logistic regression to analyze the likelihood of an individual application being approved. This would allow us to set the dependent variable as a categorical one, and that answers our research question more directly. Additionally, if we were to redo this project, we would also do more research into the economic conditions and policies that relate to H2-B visas to find if there are any institutional reasons one visa application is more likely to be approved. These statistics do not exist in a vacuum. Therefore, looking at the conditions in which this data was produced would provide useful context and lend our project better to real-world applications of our analyses. Moreover, with more time we could have also found data from more years, allowing us to look at trends over time.
-
 In terms of our dataset, there could be several things pertaining to the reliability and validity of our conclusions. As is the case in most large datasets, we had some NA values that we had to deal with. Since we combined data from several years, different years would sometimes have different columns, so we would get a lot of NA's as a result. We made do with what we had, but missing years of data could mean that changes from year to year were not represented as well. Another hurdle that we had to overcome with our data was the different wage units. Wages were mostly reported as hourly wages, but in some cases they were reported as monthly or yearly wages instead. Since there was no column reporting how many hours each worker worked, there was no way for us to standardize this data. Alas, when examining differences in wages, we chose to mainly foucs on the hourly data since that is what we had the most of to work with. Lastly we had some trouble working with the dates because they were not written in the same format each year. For example, some dates were written as 1/27/08 and others were written as 1-Jan-08. We eventually found a way to make things work, but it took us a while to get things correct. 
+
+Our statistical methods were appropriate because we had the entire population of applications in the time period, rather than a sample. As a result, we were able to use summary statistics, visualizations, and models, rather than hypothesis tests and confidence intervals. 
+
+If we had more time, we would also include logistic regression to analyze the likelihood of an individual application being approved. This would allow us to set the dependent variable as a categorical one, and that answers our research question more directly. Additionally, if we were to redo this project, we would also do more research into the economic conditions and policies that relate to H2-B visas to find if there are any institutional reasons one visa application is more likely to be approved. These statistics do not exist in a vacuum. Therefore, looking at the conditions in which this data was produced would provide useful context and lend our project better to real-world applications of our analyses. Moreover, with more time we could have also found data from more years, allowing us to look at trends over time.
 
 
 
