--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -247,6 +247,8 @@ h2b <- h2b %>%
 
 ```
 
+### Visualizations
+
 ```{r map}
 state_props <- h2b %>%
   filter(!is.na(nbur_workers_requested) & !(is.na(nbr_workers_certified))) %>%
@@ -292,6 +294,8 @@ h2b %>%
 
 We filtered out all hourly wages above 100 because we felt these were unreasonable and greatly skewed the plot. Those whose cases were certified has both the highest range and highest median wage, while those partially certified had the lowest spread and average median wage.
 
+### Linear Regression
+
 ```{r mutate-prop-certified}
 h2b <- h2b %>%
   mutate(prop_workers_certified = nbr_workers_certified/nbur_workers_requested) 
@@ -311,6 +315,7 @@ Additionally, visas submitted in the winter have the highest chance of certifica
 
 As for regional differences, visas submitted in the Northeast are mostly likely to be approved, followed by the South, the Midwest, and finally the West. Visas submitted in the Northeast is 5.18 percent more likely to be approved than the West.
 
+### Shiny
 
 ```{r map-wage}
 state_wages <- h2b %>%
@@ -502,7 +507,7 @@ We are also able to look more into seasonal trends. The most workers submit and 
 
 Another interesting observation is that most workers appear to be working in the South. When looking at most frequent job category, we see that most workers are working in the agricultural sector. Since the South produces a large portion of the country's agricultural goods, this makes sense that they would need to bring in seasonal workers to help with harvesting or planting food at different times. 
 
-###Conclusions
+### Conclusions
 
 From this project, we learned a lot about the factors that affect H2B visa approval. Our linear model, visualizations, and summary statistics showed that region, occupational category, and season had significant effects on the percent of workers that were approved. The maps allowed us to break down differences on a state by state basis, while the bar graphs gave us an understanding of some of the bigger picture categories. We found that while regions played a role in explaining the differences in approval rates, subregions helped explain some of the other differences we found in the dataset. For example, we were able to find clusters of states within regions where service jobs were most popular rather than agricultural ones. We were also able to locate anomalous states like Washington, where processing is the most popular job type and workers are payed very high wages.
 
